translate org jobdesc

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                           <img src="img/2.jpg" class="img-fluid mb-4" alt="" width="230" height="230">
                         </a><br>
                         <h5 class="h5">Speaking Competition</h5>
-                        <p>Runner up Story Telling Competition in Mathematics Festival of UNJ in 2019</p>
+                        <p>Second winner Story Telling Competition in Mathematics Festival of UNJ in 2019</p>
                       </div>
 
                     </div>
@@ -411,7 +411,7 @@
                           <img src="img/3.jpg" class="img mb-4" alt="" width="230" height="230">  
                         </a><br>
                         <h5 class="h5">Writing Competition</h5>
-                        <p>Runner up Essay Competition in UNJ's Teachers Day annual event in 2019</p>
+                        <p>Second winner Essay Competition in UNJ's Teachers Day annual event in 2019</p>
                       </div>
 
                     </div>
@@ -460,7 +460,7 @@
                       <a href="#!">
                         <span class="circle">1</span>
                         <span class="label text-md-left" style="text-align: left;">2016<br>
-                        <p style="font-weight: lighter;">Staff Departemen Advokasi 
+                        <p style="font-weight: lighter;">Advocacy Department Staff
                         <br>BEM Matematika UNJ</p></span>
                       </a>
                     </li>
@@ -470,7 +470,7 @@
                       <a href="#!">
                         <span class="circle">2</span>
                         <span class="label text-md-left" style="text-align: left;">2017<br>
-                        <p style="font-weight: lighter;">Kepala Departemen Advokasi 
+                        <p style="font-weight: lighter;">Head of Advocacy Department 
                         <br>BEM Matematika UNJ</p></span>
                       </a>
                     </li>
@@ -481,13 +481,13 @@
                         <span class="circle">3</span>
                         <span class="label text-md-left" style="text-align: left;">2018
                         <br>
-                        <p style="font-weight: lighter;">Divisi Web Development 
+                        <p style="font-weight: lighter;">Web Dev Division Staff 
                         <br>Kelompok Studi Default UNJ</p>
                         <br>
-                        <p style="font-weight: lighter;">Biro Pengembangan SDM 
+                        <p style="font-weight: lighter;">Human Resource Bureau Staff 
                         <br>Kelompok Studi Default UNJ</p>
                         <br>
-                        <p style="font-weight: lighter;">Kepala Departemen Advokasi 
+                        <p style="font-weight: lighter;">Head of Advocacy Department 
                         <br>BEM Fakultas MIPA UNJ</p>
                         </span>
                       </a>
@@ -498,7 +498,7 @@
                       <a href="#!">
                         <span class="circle">6</span>
                         <span class="label text-md-left" style="text-align: left;">2019<br>
-                        <p style="font-weight: lighter;">Kepala Divisi Pelayanan & Isu 
+                        <p style="font-weight: lighter;">Head of Service & Issue Division 
                         <br>Departemen Advokasi BEM UNJ</p></span>
                       </a>
                     </li>
