tinggal benerin cv

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <a class="nav-link" href="#org">Organizations</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="CV-Kelik.pdf" target="_blank">Resume</a>
             </li>
           </ul>
           </span>
@@ -484,7 +484,7 @@
                         <p style="font-weight: lighter;">Web Dev Division Staff 
                         <br>Kelompok Studi Default UNJ</p>
                         <br>
-                        <p style="font-weight: lighter;">Human Resource Bureau Staff 
+                        <p style="font-weight: lighter;">Human Resource Department 
                         <br>Kelompok Studi Default UNJ</p>
                         <br>
                         <p style="font-weight: lighter;">Head of Advocacy Department 
