--- a/index.html
+++ b/index.html
@@ -162,22 +162,24 @@
                 <div class="carousel-inner" role="listbox">
                   <!--First slide-->
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(130).jpg"
-                      alt="First slide">
+                    <img class="d-block w-100" src="img/project1/0.png" alt="First slide">
                   </div>
                   <!--/First slide-->
                   <!--Second slide-->
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(129).jpg"
-                      alt="Second slide">
+                    <img class="d-block w-100" src="img/project1/1.png" alt="First slide">
                   </div>
                   <!--/Second slide-->
                   <!--Third slide-->
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg"
-                      alt="Third slide">
+                    <img class="d-block w-100" src="img/project1/2.png" alt="First slide">
                   </div>
                   <!--/Third slide-->
+                  <!--Fourth slide-->
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/project1/3.png" alt="First slide">
+                  </div>
+                  <!--/Fourth slide-->
                 </div>
                 <!--/.Slides-->
                 <!--Controls-->
@@ -232,22 +234,24 @@
                 <div class="carousel-inner" role="listbox">
                   <!--First slide-->
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(130).jpg"
-                      alt="First slide">
+                    <img class="d-block w-100" src="img/project2/0.png" alt="First slide">
                   </div>
                   <!--/First slide-->
                   <!--Second slide-->
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(129).jpg"
-                      alt="Second slide">
+                    <img class="d-block w-100" src="img/project2/1.png" alt="First slide">
                   </div>
                   <!--/Second slide-->
                   <!--Third slide-->
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg"
-                      alt="Third slide">
+                    <img class="d-block w-100" src="img/project2/2.png" alt="First slide">
                   </div>
                   <!--/Third slide-->
+                  <!--Fourth slide-->
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/project2/3.png" alt="First slide">
+                  </div>
+                  <!--/Fourth slide-->
                 </div>
                 <!--/.Slides-->
                 <!--Controls-->
@@ -300,22 +304,24 @@
                 <div class="carousel-inner" role="listbox">
                   <!--First slide-->
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(130).jpg"
-                      alt="First slide">
+                    <img class="d-block w-100" src="img/project3/0.png" alt="First slide">
                   </div>
                   <!--/First slide-->
                   <!--Second slide-->
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(129).jpg"
-                      alt="Second slide">
+                    <img class="d-block w-100" src="img/project3/1.png" alt="First slide">
                   </div>
                   <!--/Second slide-->
                   <!--Third slide-->
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg"
-                      alt="Third slide">
+                    <img class="d-block w-100" src="img/project3/2.png" alt="First slide">
                   </div>
                   <!--/Third slide-->
+                  <!--Fourth slide-->
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/project3/3.png" alt="First slide">
+                  </div>
+                  <!--/Fourth slide-->
                 </div>
                 <!--/.Slides-->
                 <!--Controls-->
