--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   <h6 class="indigo-text h6 mb-4">My name is Kelik Is Cahyanto</h6>
 
                   <p style="text-align: justify; font-size: 18px;">
-                    Im computer science fresh graduate from State University of Jakarta. 
+                    I'm a computer science fresh graduate from State University of Jakarta. 
                     I am experienced in software developments and student organization.
                     Passionate in user experience research and product development.</p>
                   <p class="font-weight-normal"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
@@ -403,7 +403,7 @@
                           <img src="img/2.jpg" class="img-fluid mb-4" alt="" width="230" height="230">
                         </a><br>
                         <h5 class="h5">Speaking Competition</h5>
-                        <p>Second winner Story Telling Competition in Mathematics Festival of UNJ in 2019</p>
+                        <p>Second winner of Story Telling Competition in Mathematics Festival of UNJ in 2019</p>
                       </div>
 
                     </div>
@@ -417,7 +417,7 @@
                           <img src="img/3.jpg" class="img mb-4" alt="" width="230" height="230">  
                         </a><br>
                         <h5 class="h5">Writing Competition</h5>
-                        <p>Second winner Essay Competition in UNJ's Teachers Day annual event in 2019</p>
+                        <p>Second winner of Essay Competition in UNJ's Teachers Day annual event in 2019</p>
                       </div>
 
                     </div>
