--- a/index.html
+++ b/index.html
@@ -204,8 +204,9 @@
             <!-- Project 1 Desc-->
             <h4 class="h4 mb-3 pt-1 mt-4">Computer Based Essay Test</h4>
             <p style="text-align: justify; font-size: 17px">
-            This is a lecturer research to develop a local Mathematics Department of UNJ website for 
-            arrange and conduct online daily or final essay exams in order to simplify the proccess
+            i joined my lecturer's research team in developing a 
+            local website of mathematics department UNJ for conducting daily or 
+            final essay online exams in order to simplify the proccess
             and minimize use of the paper.
             <br><br>
               Developed using <strong>Laravel</strong> and <strong>Bootstrap 3</strong> framework and
@@ -276,9 +277,9 @@
             <!-- Project 2 Desc-->
             <h4 class="h4 mb-3 pt-1">Official Letter Management Web</h4>
             <p style="text-align: justify; font-size: 17px">
-              This was my internship project based on Information division of BNPB needs 
-              to create and manage official letters more ease and well-organized, i also
-              conduct a usability assessment on this for my thesis research.
+              This was my internship project based on the needs of information division in 
+              BNPB to ease and organize the making and management system of their official letters. 
+              I conducted a usability assessment on this for my thesis research as well.
               <br><br>Developed using <strong> Code Igniter</strong> and <strong>Material 
             Design Bootstrap</strong> and it known that it is still used today.</p>
             <!-- End of Project 1 Desc-->
@@ -347,7 +348,7 @@
             <h4 class="h4 mb-4 pt-1">National Science Festival Web</h4>
             <p style="text-align: justify; font-size: 17px">Mathematics and Science
             Faculty of UNJ held an annual National Science Festival every year. Olympiad
-            and competition is held for all across students in Indonesia from primary schools,
+            and competition are held for all across students in Indonesia from primary,
             junior and high schools. <br><br>Developed in 2018 using <strong>Code Igniter</strong> 
             and <strong>Material Design Bootstrap</strong> framework.</p>
             <!-- End of Project 1 Desc-->
