org desc correction

--- a/index.html
+++ b/index.html
@@ -450,8 +450,9 @@
             <h3 class="h3 mb-4">Organization</h3>
 
             <p class="text-justify" style="font-size: 18px">
-              I have been actively join student organization with many duties such as held an national event, 
-              team management, social activities, coaching and public speaking, loby and negotiating etc.
+              During my study, I actively engaged in various student organizations 
+              with challenging tasks that developed my skills in arranging and organizing events, 
+              social activities, team management, coaching and public speaking, lobbying and negotiating, etc.
               </p>
 
               <!-- Horizontal Steppers -->
