--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <!-- Grid column -->
                 <div class="col-md-4 col-sm-12 mt-5">
                         <div class="text-center mb-4">
-                          <img src="img/me.png" class="img-fluid mb-4 rounded-circle z-depth-1-half" alt="" width="180" height="180">
+                          <img src="img/profpic.jpg" class="img-fluid mb-4 rounded-circle z-depth-1-half" alt="" width="180" height="180">
                         </div>            
                       </div>
                 <!-- Grid column -->
@@ -113,7 +113,7 @@
                   <p style="text-align: justify; font-size: 18px;">
                     I'm a computer science fresh graduate from State University of Jakarta. 
                     I am experienced in software developments and student organization.
-                    Passionate in user experience research and product development.</p>
+                    Passionate in UX research and Software Testing.</p>
                   <p class="font-weight-normal"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
 
                   <a class="btn btn-indigo mb-4" href="#exp">Read more</a>
