--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
                   <h6 class="indigo-text h6 mb-4">My name is Kelik Is Cahyanto</h6>
 
                   <p style="text-align: justify; font-size: 18px;">
-                    I'm a computer science fresh graduate from State University of Jakarta. 
-                    I am experienced in software developments and student organization.
-                    Passionate in UX research and Software Testing.</p>
+                    I'm a computer science fresh graduate with experience 
+                    in software developments and student organization.
+                    Im Passionate in UX research and Software Testing,
+                	and looking forward for opportunity!.</p>
                   <p class="font-weight-normal"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
 
                   <a class="btn btn-indigo mb-4" href="#exp">Read more</a>
@@ -202,7 +203,7 @@
           <div class="col-md-5 mb-4">
 
             <!-- Project 1 Desc-->
-            <h4 class="h4 mb-3 pt-1 mt-4">Computer Based Essay Test</h4>
+            <h4 class="h4 mb-3 pt-1 mt-4">Exam Management System</h4>
             <p style="text-align: justify; font-size: 17px">
             i joined my lecturer's research team in developing a 
             local website of mathematics department UNJ for conducting daily or 
@@ -409,8 +410,10 @@
 
                     </div>
                     <!--Grid column-->
+				</div>
 
-                    	<!--Grid column-->
+				<div class="row mb-4 wow fadeIn">
+                    <!--Grid column-->
                     <div class="col-lg-4 col-md-12 mb-4">
 
                       <div class="text-center mb-4">
@@ -419,6 +422,20 @@
                         </a><br>
                         <h5 class="h5">Writing Competition</h5>
                         <p>Second winner of Essay Competition in UNJ's Teachers Day annual event in 2019</p>
+                      </div>
+
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-12 mb-4">
+
+                      <div class="text-center mb-4">
+                        <a href='https://stories.freepik.com/'>
+                          <img src="img/4.jpg" class="img mb-4" alt="" width="230" height="230">  
+                        </a><br>
+                        <h5 class="h5">ITPM Training</h5>
+                        <p>Accomplished IT Project Manager Training by Kominfo in 2020</p>
                       </div>
 
                     </div>
