--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <div class="row mb-4 wow fadeIn">
 
                     <!--Grid column-->
-                    <div class="col-lg-4 col-md-12 mb-4">
+                    <div class="col-lg-6 col-md-12 mb-4">
 
                     	<div class="text-center mb-4">
                         <a href='https://stories.freepik.com/'>
@@ -398,7 +398,7 @@
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-4 col-md-12 mb-4">
+                    <div class="col-lg-6 col-md-12 mb-4">
 
                     	<div class="text-center mb-4">
                         <a href='https://stories.freepik.com/'>
@@ -414,7 +414,7 @@
 
 				<div class="row mb-4 wow fadeIn">
                     <!--Grid column-->
-                    <div class="col-lg-4 col-md-12 mb-4">
+                    <div class="col-lg-6 col-md-12 mb-4">
 
                       <div class="text-center mb-4">
                         <a href='https://stories.freepik.com/'>
@@ -428,14 +428,14 @@
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-4 col-md-12 mb-4">
+                    <div class="col-lg-6 col-md-12 mb-4">
 
                       <div class="text-center mb-4">
                         <a href='https://stories.freepik.com/'>
                           <img src="img/4.jpg" class="img mb-4" alt="" width="230" height="230">  
                         </a><br>
-                        <h5 class="h5">ITPM Training</h5>
-                        <p>Accomplished IT Project Manager Training by Kominfo in 2020</p>
+                        <h5 class="h5">Project Manager Training</h5>
+                        <p>Accomplished IT Project Manager Training by Digital Talent Kominfo in 2020</p>
                       </div>
 
                     </div>
