--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     I'm a computer science fresh graduate with experience 
                     in software developments and student organization.
                     Im Passionate in UX research and Software Testing,
-                	and looking forward for opportunity!.</p>
+                	and looking forward for opportunity!</p>
                   <p class="font-weight-normal"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
 
                   <a class="btn btn-indigo mb-4" href="#exp">Read more</a>
@@ -205,7 +205,7 @@
             <!-- Project 1 Desc-->
             <h4 class="h4 mb-3 pt-1 mt-4">Exam Management System</h4>
             <p style="text-align: justify; font-size: 17px">
-            i joined my lecturer's research team in developing a 
+            I joined my lecturer's research team in developing a 
             local website of mathematics department UNJ for conducting daily or 
             final essay online exams in order to simplify the proccess
             and minimize use of the paper.
@@ -280,7 +280,7 @@
             <p style="text-align: justify; font-size: 17px">
               This was my internship project based on the needs of information division in 
               BNPB to ease and organize the making and management system of their official letters. 
-              I conducted a usability assessment on this for my thesis research as well.
+              I conducted a usability assessment on this for my thesis research as well based on ISO 9241-11.
               <br><br>Developed using <strong> Code Igniter</strong> and <strong>Material 
             Design Bootstrap</strong> and it known that it is still used today.</p>
             <!-- End of Project 1 Desc-->
@@ -383,8 +383,10 @@
                 <!--Grid row-->
                 <div class="row mb-4 wow fadeIn">
 
+                	<div class="col-lg-2"></div>
+
                     <!--Grid column-->
-                    <div class="col-lg-6 col-md-12 mb-4">
+                    <div class="col-lg-4 col-md-12 mb-4">
 
                     	<div class="text-center mb-4">
                         <a href='https://stories.freepik.com/'>
@@ -398,7 +400,7 @@
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-6 col-md-12 mb-4">
+                    <div class="col-lg-4 col-md-12 mb-4">
 
                     	<div class="text-center mb-4">
                         <a href='https://stories.freepik.com/'>
@@ -410,11 +412,14 @@
 
                     </div>
                     <!--Grid column-->
+                    <div class="col-lg-2"></div>
 				</div>
 
 				<div class="row mb-4 wow fadeIn">
+					<div class="col-lg-2"></div>
+
                     <!--Grid column-->
-                    <div class="col-lg-6 col-md-12 mb-4">
+                    <div class="col-lg-4 col-md-12 mb-4">
 
                       <div class="text-center mb-4">
                         <a href='https://stories.freepik.com/'>
@@ -428,18 +433,20 @@
                     <!--Grid column-->
 
                     <!--Grid column-->
-                    <div class="col-lg-6 col-md-12 mb-4">
+                    <div class="col-lg-4 col-md-12 mb-4">
 
                       <div class="text-center mb-4">
                         <a href='https://stories.freepik.com/'>
                           <img src="img/4.jpg" class="img mb-4" alt="" width="230" height="230">  
                         </a><br>
-                        <h5 class="h5">Project Manager Training</h5>
-                        <p>Accomplished IT Project Manager Training by Digital Talent Kominfo in 2020</p>
+                        <h5 class="h5">Project Management Training</h5>
+                        <p>Accomplished IT Project Management Training by Digital Talent Kominfo in 2020</p>
                       </div>
 
                     </div>
                     <!--Grid column-->
+
+                    <div class="col-lg-2"></div>
 
                     </div>
                     <!--Grid column-->
