--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   <p style="text-align: justify; font-size: 18px;">
                     I'm a computer science fresh graduate with experience 
                     in software developments and student organization.
-                    Im Passionate in UX research and Software Testing,
+                    Im Passionate in UX Research and Software Testing,
                 	and looking forward for opportunity!</p>
                   <p class="font-weight-normal"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
 
@@ -572,7 +572,7 @@
                 <h3 class="h3 mb-4">Contact</h3>
 
             <p class="text-justify" style="font-size: 18px">
-              Look forward to work together with you. 
+              Thank you for take a look at my portofolio, im really Look forward to work together with you. 
               Directly contact me on my social media and let's create something good for people! 
             </p>
             <br>
